--- a/tutorials/pendulum/1_environment_creation.ipynb
+++ b/tutorials/pendulum/1_environment_creation.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## Pendulum Swing-up\n",
     "\n",
-    "We will create an environment for solving the classic control problem of swinging up an underactuated pendulum, very similar to the [Pendulum-v0 environment](https://gym.openai.com/envs/Pendulum-v0/).\n",
+    "We will create an environment for solving the classic control problem of swinging up an underactuated pendulum, very similar to the [Pendulum-v1 environment](https://www.gymlibrary.ml/environments/classic_control/pendulum/).\n",
     "Our goal is to swing up this pendulum to the upright position and keep it there, while minimizing the velocity of the pendulum and the input voltage.\n",
     "\n",
     "Since the dynamics of a pendulum actuated by a DC motor are well known, we can simulate the pendulum by integrating the corresponding ordinary differential equations (ODEs):\n",
@@ -45,20 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b7485878-73c8-43fc-8b9a-a8fc9d8e1775",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not running on CoLab.\n",
-      "Execute ROS commands as \"!...\".\n",
-      "ROS noetic available.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    import eagerx_tutorials\n",
@@ -93,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f0faf969",
    "metadata": {
     "collapsed": false,
@@ -104,44 +94,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... logging to /home/jelle/.ros/log/8a5aba50-cab1-11ec-9a64-612c3b44983f/roslaunch-jelle-Alienware-m15-R4-18483.log\n",
-      "\u001B[1mstarted roslaunch server http://145.94.217.36:45875/\u001B[0m\n",
-      "ros_comm version 1.15.14\n",
-      "\n",
-      "\n",
-      "SUMMARY\n",
-      "========\n",
-      "\n",
-      "PARAMETERS\n",
-      " * /rosdistro: noetic\n",
-      " * /rosversion: 1.15.14\n",
-      "\n",
-      "NODES\n",
-      "\n",
-      "auto-starting new master\n",
-      "\u001B[1mprocess[master]: started with pid [18537]\u001B[0m\n",
-      "\u001B[1mROS_MASTER_URI=http://localhost:11311\u001B[0m\n",
-      "\u001B[1msetting /run_id to 8a5aba50-cab1-11ec-9a64-612c3b44983f\u001B[0m\n",
-      "\u001B[1mprocess[rosout-1]: started with pid [18562]\u001B[0m\n",
-      "started core service [/rosout]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<roslaunch.parent.ROSLaunchParent at 0x7f97dbce6610>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import eagerx\n",
     "# Initialize eagerx (starts roscore if not already started.)\n",
@@ -166,67 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "eeaac748",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Registered entity_id=`Pendulum`:\n",
-      "   entity_type: `Object`\n",
-      "   module: `eagerx_tutorials.pendulum.objects`\n",
-      "   file: `/home/jelle/eagerx_dev/eagerx_tutorials/eagerx_tutorials/pendulum/objects.py`\n",
-      "\n",
-      "Supported bridges:\n",
-      " - OdeBridge\n",
-      "\n",
-      "Make this spec with (use `entity_id: str = \"Pendulum\"`):\n",
-      "   spec = Object.make(entity_id: str, name: str, actuators: List[str] = None, sensors: List[str] = None, states: List[str] = None, rate: float = 30.0, render_shape: List[int] = None)\n",
-      "\n",
-      "class Pendulum(Object):\n",
-      "   spec(spec: eagerx.core.specs.ObjectSpec, name: str, actuators: List[str] = None, sensors: List[str] = None, states: List[str] = None, rate: float = 30.0, render_shape: List[int] = None):\n",
-      "      docs:\n",
-      "         Object spec of Pendulum\n",
-      "\n",
-      "   agnostic(spec: eagerx.core.specs.ObjectSpec, rate: float):\n",
-      "      config:\n",
-      "       - render_shape: [480, 480]\n",
-      "      sensors:\n",
-      "       - theta: <class 'std_msgs.msg._Float32.Float32'>\n",
-      "       - dtheta: <class 'std_msgs.msg._Float32.Float32'>\n",
-      "       - image: <class 'sensor_msgs.msg._Image.Image'>\n",
-      "       - u: <class 'std_msgs.msg._Float32MultiArray.Float32MultiArray'>\n",
-      "      actuators:\n",
-      "       - u: <class 'std_msgs.msg._Float32MultiArray.Float32MultiArray'>\n",
-      "      engine_states:\n",
-      "       - model_state: <class 'std_msgs.msg._Float32MultiArray.Float32MultiArray'>\n",
-      "       - model_parameters: <class 'std_msgs.msg._Float32MultiArray.Float32MultiArray'>\n",
-      "      docs:\n",
-      "         Agnostic definition of the Pendulum.\n",
-      "\n",
-      "                 Sensors\n",
-      "                 theta: angle of the pendulum wrt upward position\n",
-      "                 dtheta: angular velocity of the pendulum\n",
-      "                 image: render of pendulum system\n",
-      "                 u: DC motor voltage\n",
-      "\n",
-      "                 Actuators\n",
-      "                 u: DC motor voltage\n",
-      "\n",
-      "                 States\n",
-      "                 model_state: allows resetting the angle and angular velocity\n",
-      "                 model_parameters: allows resetting ODE parameters [J, m, l, b, K, R]\n",
-      "\n",
-      "                 Config\n",
-      "                 render_shape: shape of render window [height, width]\n",
-      "        \n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import eagerx_tutorials.pendulum  # Registers Pendulum\n",
     "\n",
@@ -248,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "da5a5a0e-6502-4ac1-9b27-c3e207a8c47b",
    "metadata": {},
    "outputs": [],
@@ -279,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2686fa8a",
    "metadata": {},
    "outputs": [],
@@ -340,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "badb2076",
    "metadata": {},
    "outputs": [],
@@ -365,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "382dd9b5",
    "metadata": {},
    "outputs": [],
@@ -414,123 +310,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "19aaa2b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] [1651562443.303998]: Node \"/PendulumEnv/env/supervisor\" initialized.\n",
-      "[INFO] [1651562443.448747]: Node \"/PendulumEnv/bridge\" initialized.\n",
-      "[INFO] [1651562443.646331]: Node \"/PendulumEnv/environment\" initialized.\n",
-      "[INFO] [1651562443.721903]: Node \"/PendulumEnv/env/render\" initialized.\n",
-      "[INFO] [1651562443.826245]: Node \"/PendulumEnv/pendulum/theta\" initialized.\n",
-      "[INFO] [1651562443.850971]: Node \"/PendulumEnv/pendulum/dtheta\" initialized.\n",
-      "[INFO] [1651562443.890103]: START RENDERING!\n",
-      "Using cpu device\n",
-      "Wrapping the env with a `Monitor` wrapper\n",
-      "Wrapping the env in a DummyVecEnv.\n",
-      "[INFO] [1651562443.916023]: Adding object \"pendulum\" of type \"Pendulum\" to the simulator.\n",
-      "[INFO] [1651562443.930199]: Node \"/PendulumEnv/pendulum/x\" initialized.\n",
-      "[INFO] [1651562443.941389]: [pendulum/image] START RENDERING!\n",
-      "[INFO] [1651562443.947704]: Node \"/PendulumEnv/pendulum/image\" initialized.\n",
-      "[INFO] [1651562443.960112]: Node \"/PendulumEnv/pendulum/pendulum_actuator\" initialized.\n",
-      "[INFO] [1651562443.972254]: Node \"/PendulumEnv/pendulum/u\" initialized.\n",
-      "[INFO] [1651562444.023590]: Waiting for nodes \"['pendulum/image', 'pendulum/pendulum_actuator', 'pendulum/u']\" to be initialized.\n",
-      "[INFO] [1651562444.463799]: Nodes initialized.\n",
-      "[INFO] [1651562444.535006]: Pipelines initialized.\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -948     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 4        |\n",
-      "|    fps             | 71       |\n",
-      "|    time_elapsed    | 5        |\n",
-      "|    total_timesteps | 404      |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 17.8     |\n",
-      "|    critic_loss     | 10.2     |\n",
-      "|    ent_coef        | 0.916    |\n",
-      "|    ent_coef_loss   | -0.116   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 303      |\n",
-      "---------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -915     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 8        |\n",
-      "|    fps             | 69       |\n",
-      "|    time_elapsed    | 11       |\n",
-      "|    total_timesteps | 808      |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 31       |\n",
-      "|    critic_loss     | 9.61     |\n",
-      "|    ent_coef        | 0.832    |\n",
-      "|    ent_coef_loss   | -0.193   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 707      |\n",
-      "---------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -907     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 12       |\n",
-      "|    fps             | 68       |\n",
-      "|    time_elapsed    | 17       |\n",
-      "|    total_timesteps | 1212     |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 44.7     |\n",
-      "|    critic_loss     | 4.64     |\n",
-      "|    ent_coef        | 0.742    |\n",
-      "|    ent_coef_loss   | -0.385   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 1111     |\n",
-      "---------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -889     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 16       |\n",
-      "|    fps             | 68       |\n",
-      "|    time_elapsed    | 23       |\n",
-      "|    total_timesteps | 1616     |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 59.7     |\n",
-      "|    critic_loss     | 3.83     |\n",
-      "|    ent_coef        | 0.655    |\n",
-      "|    ent_coef_loss   | -0.481   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 1515     |\n",
-      "---------------------------------\n",
-      "[INFO] [1651562470.290369]: [PendulumEnv][/PendulumEnv/bridge] Shutting down.\n",
-      "[INFO] [1651562470.291187]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/x'.\n",
-      "[INFO] [1651562470.291922]: [/PendulumEnv/pendulum/x] Shutting down.\n",
-      "[INFO] [1651562470.341862]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/image'.\n",
-      "[INFO] [1651562470.342609]: [/PendulumEnv/pendulum/image] Shutting down.\n",
-      "[INFO] [1651562470.343375]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/pendulum_actuator'.\n",
-      "[INFO] [1651562470.343929]: [/PendulumEnv/pendulum/pendulum_actuator] Shutting down.\n",
-      "[INFO] [1651562470.344609]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/u'.\n",
-      "[INFO] [1651562470.345255]: [/PendulumEnv/pendulum/u] Shutting down.\n",
-      "[INFO] [1651562470.345999]: [/PendulumEnv/bridge] Shutting down.\n",
-      "[INFO] [1651562470.347328]: [PendulumEnv][/PendulumEnv/env/render] Shutting down.\n",
-      "[INFO] [1651562470.347893]: [/PendulumEnv/env/render] Shutting down.\n",
-      "[INFO] [1651562470.350011]: [PendulumEnv][/PendulumEnv/pendulum/theta] Shutting down.\n",
-      "[INFO] [1651562470.350553]: [/PendulumEnv/pendulum/theta] Shutting down.\n",
-      "[INFO] [1651562470.351172]: [PendulumEnv][/PendulumEnv/pendulum/dtheta] Shutting down.\n",
-      "[INFO] [1651562470.351760]: [/PendulumEnv/pendulum/dtheta] Shutting down.\n",
-      "[INFO] [1651562470.352371]: [/PendulumEnv/env/supervisor] Shutting down.\n",
-      "[INFO] [1651562470.355477]: [/PendulumEnv/environment] Shutting down.\n",
-      "[INFO] [1651562470.357374]: Parameters under namespace \"/PendulumEnv\" deleted.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import stable_baselines3 as sb\n",
     "from eagerx.wrappers import Flatten\n",
@@ -553,6 +336,14 @@
     "\n",
     "env.shutdown()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78e8d29d-6678-4b0a-834d-6d6cc9d78eb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -571,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
