--- a/tutorials/pendulum/2_reset_and_step.ipynb
+++ b/tutorials/pendulum/2_reset_and_step.ipynb
@@ -15,13 +15,12 @@
     "- The `window` argument of the [connect method](https://eagerx.readthedocs.io/en/master/guide/api_reference/graph/graph.html?highlight=connect#eagerx.core.graph.Graph.connect)\n",
     "- Simulating delays using the `delay` argument of the [connect method](https://eagerx.readthedocs.io/en/master/guide/api_reference/graph/graph.html?highlight=connect#eagerx.core.graph.Graph.connect)\n",
     "\n",
-    "In the remainder of this tutorial we will go more into detail on these concepts.\n",
+    "In the remainder of this tutorial, we will go more into detail on these concepts.\n",
     "\n",
     "Furthermore, at the end of this notebook you will find exercises.\n",
     "For the exercises you will have to add/modify a couple of lines of code, which are marked by\n",
     "\n",
     "```python\n",
-    "\n",
     "# START EXERCISE [BLOCK_NUMBER]\n",
     "\n",
     "# END EXERCISE [BLOCK_NUMBER]\n",
@@ -29,7 +28,7 @@
     "\n",
     "## Pendulum Swing-up\n",
     "\n",
-    "We will create an environment for solving the classic control problem of swinging up an underactuated pendulum, very similar to the [Pendulum-v0 environment](https://gym.openai.com/envs/Pendulum-v0/).\n",
+    "We will create an environment for solving the classic control problem of swinging up an underactuated pendulum, very similar to the [Pendulum-v1 environment](https://www.gymlibrary.ml/environments/classic_control/pendulum/).\n",
     "Our goal is to swing up this pendulum to the upright position and keep it there, while minimizing the velocity of the pendulum and the input voltage.\n",
     "\n",
     "Since the dynamics of a pendulum actuated by a DC motor are well known, we can simulate the pendulum by integrating the corresponding ordinary differential equations (ODEs):\n",
@@ -46,20 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "985d462b-fdc5-4539-bd18-a58eafd22353",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not running on CoLab.\n",
-      "Execute ROS commands as \"!...\".\n",
-      "ROS noetic available.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    import eagerx_tutorials\n",
@@ -93,32 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "00d59319-5b5f-4760-8c19-cc3279cac896",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... logging to /home/jelle/.ros/log/d734afb2-c7c2-11ec-ab25-bdefe663dbb0/roslaunch-jelle-Alienware-m15-R4-63389.log\n",
-      "\u001b[1mstarted roslaunch server http://145.94.60.89:33347/\u001b[0m\n",
-      "ros_comm version 1.15.14\n",
-      "\n",
-      "\n",
-      "SUMMARY\n",
-      "========\n",
-      "\n",
-      "PARAMETERS\n",
-      " * /rosdistro: noetic\n",
-      " * /rosversion: 1.15.14\n",
-      "\n",
-      "NODES\n",
-      "\n",
-      "[INFO] [1651241088.184788]: Roscore cannot run as another roscore/master is already running. Continuing without re-initializing the roscore.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import eagerx\n",
     "import eagerx_tutorials.pendulum  # Registers Pendulum\n",
@@ -156,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ca2e099b-1723-45d4-9ade-44ec3475002a",
    "metadata": {},
    "outputs": [],
@@ -170,11 +137,11 @@
     "# Make pendulum\n",
     "\n",
     "# START EXERCISE 1.1\n",
-    "sensors = [\"theta\", \"dtheta\", \"image\"]\n",
+    "sensors = [\"theta\", \"u\", \"image\"]\n",
     "# END EXERCISE 1.1\n",
     "\n",
     "# START EXERCISE 2.1\n",
-    "states = [\"model_state\"]\n",
+    "states = [\"model_state\", \"model_parameters\"]\n",
     "# END EXERCISE 2.1\n",
     "\n",
     "pendulum = eagerx.Object.make(\"Pendulum\", \"pendulum\", actuators=[\"u\"], sensors=sensors, states=states)\n",
@@ -185,14 +152,13 @@
     "# Connect the pendulum to an action and observation\n",
     "# We will now explicitly set the window size\n",
     "graph.connect(action=\"voltage\", target=pendulum.actuators.u, window=1)\n",
-    "graph.connect(source=pendulum.sensors.theta, observation=\"angle\", window=1)\n",
     "\n",
     "# START EXERCISE 1.2\n",
-    "graph.connect(source=pendulum.sensors.dtheta, observation=\"angular_velocity\", window=1)\n",
+    "graph.connect(source=pendulum.sensors.theta, observation=\"angle\", window=3, delay=0.01)\n",
     "# END EXERCISE 1.2\n",
     "\n",
     "# START EXERCISE 1.3\n",
-    "\n",
+    "graph.connect(source=pendulum.sensors.u, observation=\"action_applied\", window=1)\n",
     "# END EXERCISE 1.3\n",
     "\n",
     "# Render image\n",
@@ -244,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e0949c08-00d3-4a9a-9c6f-cb8f304d5994",
    "metadata": {},
    "outputs": [],
@@ -259,7 +225,9 @@
     "    th = observation[\"angle\"][-1]\n",
     "    \n",
     "    # START EXERCISE 1.4\n",
-    "    thdot = observation[\"angular_velocity\"][-1]\n",
+    "    # thdot = observation[\"angular_velocity\"][-1]\n",
+    "    old_th = previous_observation[\"angle\"][-1]\n",
+    "    thdot = rate * (th - old_th)\n",
     "    # END EXERCISE 1.4\n",
     "    \n",
     "    # Convert from numpy array to float\n",
@@ -304,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6d9f408f-a84d-4367-b32e-fbdb6e94e302",
    "metadata": {},
    "outputs": [],
@@ -317,11 +285,20 @@
     "    # START EXERCISE 2.2\n",
     "    \n",
     "    # key = \"[object_name]/[state_name]\"\n",
-    "    state_dict[\"pendulum/model_state\"] = np.array([np.pi, 0], dtype=\"float32\")\n",
-    "    \n",
+    "    state_dict = env.state_space.sample()\n",
     "    # END EXERCISE 2.2\n",
     "    \n",
     "    return state_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f508e203-f2d1-4398-b85e-f1c44699dafa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.unwrapped.state_space.sample()"
    ]
   },
   {
@@ -334,122 +311,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6bf343ae-0cb1-4726-b03d-f80830e61784",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] [1651241088.944307]: Node \"/PendulumEnv/env/supervisor\" initialized.\n",
-      "[INFO] [1651241089.087094]: Node \"/PendulumEnv/bridge\" initialized.\n",
-      "[INFO] [1651241089.209922]: Node \"/PendulumEnv/environment\" initialized.\n",
-      "[INFO] [1651241089.236116]: Node \"/PendulumEnv/env/render\" initialized.\n",
-      "[INFO] [1651241089.311365]: Node \"/PendulumEnv/pendulum/theta\" initialized.\n",
-      "[INFO] [1651241089.383828]: Node \"/PendulumEnv/pendulum/dtheta\" initialized.\n",
-      "[INFO] [1651241089.454643]: START RENDERING!\n",
-      "Using cuda device\n",
-      "Wrapping the env with a `Monitor` wrapper\n",
-      "Wrapping the env in a DummyVecEnv.\n",
-      "[INFO] [1651241089.483672]: Adding object \"pendulum\" of type \"Pendulum\" to the simulator.\n",
-      "[INFO] [1651241089.501378]: Node \"/PendulumEnv/pendulum/x\" initialized.\n",
-      "[INFO] [1651241089.512113]: [pendulum/image] START RENDERING!\n",
-      "[INFO] [1651241089.518910]: Node \"/PendulumEnv/pendulum/image\" initialized.\n",
-      "[INFO] [1651241089.533136]: Node \"/PendulumEnv/pendulum/pendulum_actuator\" initialized.\n",
-      "[INFO] [1651241089.547454]: Node \"/PendulumEnv/pendulum/u\" initialized.\n",
-      "[INFO] [1651241092.752754]: Nodes initialized.\n",
-      "[INFO] [1651241092.810296]: Pipelines initialized.\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -974     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 4        |\n",
-      "|    fps             | 76       |\n",
-      "|    time_elapsed    | 5        |\n",
-      "|    total_timesteps | 404      |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 18.1     |\n",
-      "|    critic_loss     | 5.39     |\n",
-      "|    ent_coef        | 0.917    |\n",
-      "|    ent_coef_loss   | -0.116   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 303      |\n",
-      "---------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -967     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 8        |\n",
-      "|    fps             | 71       |\n",
-      "|    time_elapsed    | 11       |\n",
-      "|    total_timesteps | 808      |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 32.6     |\n",
-      "|    critic_loss     | 3.2      |\n",
-      "|    ent_coef        | 0.823    |\n",
-      "|    ent_coef_loss   | -0.258   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 707      |\n",
-      "---------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -958     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 12       |\n",
-      "|    fps             | 70       |\n",
-      "|    time_elapsed    | 17       |\n",
-      "|    total_timesteps | 1212     |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 47.5     |\n",
-      "|    critic_loss     | 1.28     |\n",
-      "|    ent_coef        | 0.727    |\n",
-      "|    ent_coef_loss   | -0.437   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 1111     |\n",
-      "---------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -931     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 16       |\n",
-      "|    fps             | 70       |\n",
-      "|    time_elapsed    | 22       |\n",
-      "|    total_timesteps | 1616     |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 62       |\n",
-      "|    critic_loss     | 0.991    |\n",
-      "|    ent_coef        | 0.648    |\n",
-      "|    ent_coef_loss   | -0.488   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 1515     |\n",
-      "---------------------------------\n",
-      "[INFO] [1651241117.890363]: [PendulumEnv][/PendulumEnv/bridge] Shutting down.\n",
-      "[INFO] [1651241117.891250]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/x'.\n",
-      "[INFO] [1651241117.891805]: [/PendulumEnv/pendulum/x] Shutting down.\n",
-      "[INFO] [1651241117.945183]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/image'.\n",
-      "[INFO] [1651241117.945928]: [/PendulumEnv/pendulum/image] Shutting down.\n",
-      "[INFO] [1651241117.946558]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/pendulum_actuator'.\n",
-      "[INFO] [1651241117.947154]: [/PendulumEnv/pendulum/pendulum_actuator] Shutting down.\n",
-      "[INFO] [1651241117.947795]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/u'.\n",
-      "[INFO] [1651241117.948419]: [/PendulumEnv/pendulum/u] Shutting down.\n",
-      "[INFO] [1651241117.949280]: [/PendulumEnv/bridge] Shutting down.\n",
-      "[INFO] [1651241117.950547]: [PendulumEnv][/PendulumEnv/env/render] Shutting down.\n",
-      "[INFO] [1651241117.951180]: [/PendulumEnv/env/render] Shutting down.\n",
-      "[INFO] [1651241117.953123]: [PendulumEnv][/PendulumEnv/pendulum/theta] Shutting down.\n",
-      "[INFO] [1651241117.953688]: [/PendulumEnv/pendulum/theta] Shutting down.\n",
-      "[INFO] [1651241117.954355]: [PendulumEnv][/PendulumEnv/pendulum/dtheta] Shutting down.\n",
-      "[INFO] [1651241117.954935]: [/PendulumEnv/pendulum/dtheta] Shutting down.\n",
-      "[INFO] [1651241117.955613]: [/PendulumEnv/env/supervisor] Shutting down.\n",
-      "[INFO] [1651241117.958478]: [/PendulumEnv/environment] Shutting down.\n",
-      "[INFO] [1651241117.960480]: Parameters under namespace \"/PendulumEnv\" deleted.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import stable_baselines3 as sb\n",
     "from eagerx.wrappers import Flatten\n",
@@ -465,7 +330,7 @@
     "env = Flatten(env)\n",
     "\n",
     "# Initialize learner\n",
-    "model = sb.SAC(\"MlpPolicy\", env, verbose=1)\n",
+    "model = sb.SAC(\"MlpPolicy\", env, learning_rate=1e-3, verbose=1)\n",
     "\n",
     "# Train for 1 minute (sim time)\n",
     "model.learn(total_timesteps=int(60 * rate))\n",
@@ -516,7 +381,7 @@
     "\n",
     "We also have to update `step_fn`, since we no longer have the *angular_velocity* observation.\n",
     "In the reward function, we still want to penalize the angular velocity.\n",
-    "Therefore we will have to approximate $\\dot{\\theta}$ in `step_fn`, which could for example be done as follows: $\\hat{\\dot{\\theta}} = \\text{rate} \\times (\\theta_k  - \\theta_{k - 1})$ where $k$ is the time step and rate is the `rate` of the [environment](https://eagerx.readthedocs.io/en/master/guide/api_reference/env/index.html).\n",
+    "Therefore we will have to approximate $\\dot{\\theta}$ in `step_fn`, which could for example be done as follows: $\\hat{\\dot{\\theta}} = \\text{rate} \\times (\\theta_k  - \\theta_{k - 1})$ where $k$ is the time step and rate is the `rate` of the [environment](https://eagerx.readthedocs.io/en/master/guide/api_reference/env/index.html) (in Hz).\n",
     "\n",
     "### Add your code to the following blocks: \n",
     "\n",
@@ -554,6 +419,14 @@
     "2.1 Add the state *model_parameters* to the list of states of the pendulum  \n",
     "2.2 Update the reset function, such that the *model_state* and *model_parameters* states are reset to random values at the beginning of each episode."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5688790e-c0dc-45d9-a88b-070a709636a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -572,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
