--- a/tutorials/pendulum/3_converters.ipynb
+++ b/tutorials/pendulum/3_converters.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "## Pendulum Swing-up\n",
     "\n",
-    "We will create an environment for solving the classic control problem of swinging up an underactuated pendulum, very similar to the [Pendulum-v0 environment](https://gym.openai.com/envs/Pendulum-v0/).\n",
+    "We will create an environment for solving the classic control problem of swinging up an underactuated pendulum, very similar to the [Pendulum-v1 environment](https://www.gymlibrary.ml/environments/classic_control/pendulum/).\n",
     "Our goal is to swing up this pendulum to the upright position and keep it there, while minimizing the velocity of the pendulum and the input voltage.\n",
     "\n",
     "Since the dynamics of a pendulum actuated by a DC motor are well known, we can simulate the pendulum by integrating the corresponding ordinary differential equations (ODEs):\n",
@@ -45,20 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ca8b6d03-40d4-4b45-92b2-61ffa09a3249",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not running on CoLab.\n",
-      "Execute ROS commands as \"!...\".\n",
-      "ROS noetic available.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    import eagerx_tutorials\n",
@@ -92,47 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "da87b514-cde8-4ff3-968b-718fe1b5c38c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... logging to /home/jelle/.ros/log/29ef0558-caf3-11ec-a7aa-b9cef6e47e5f/roslaunch-jelle-Alienware-m15-R4-81444.log\n",
-      "\u001B[1mstarted roslaunch server http://145.94.60.89:46581/\u001B[0m\n",
-      "ros_comm version 1.15.14\n",
-      "\n",
-      "\n",
-      "SUMMARY\n",
-      "========\n",
-      "\n",
-      "PARAMETERS\n",
-      " * /rosdistro: noetic\n",
-      " * /rosversion: 1.15.14\n",
-      "\n",
-      "NODES\n",
-      "\n",
-      "auto-starting new master\n",
-      "\u001B[1mprocess[master]: started with pid [81507]\u001B[0m\n",
-      "\u001B[1mROS_MASTER_URI=http://localhost:11311\u001B[0m\n",
-      "\u001B[1msetting /run_id to 29ef0558-caf3-11ec-a7aa-b9cef6e47e5f\u001B[0m\n",
-      "\u001B[1mprocess[rosout-1]: started with pid [81535]\u001B[0m\n",
-      "started core service [/rosout]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<roslaunch.parent.ROSLaunchParent at 0x7f14ac7cc880>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import eagerx\n",
     "import eagerx_tutorials.pendulum  # Registers Pendulum\n",
@@ -159,67 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "60d2aed5-3b5e-4d8c-b528-3ed5cc578b26",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Registered entity_id=`Pendulum`:\n",
-      "   entity_type: `Object`\n",
-      "   module: `eagerx_tutorials.pendulum.objects`\n",
-      "   file: `/home/jelle/eagerx_dev/eagerx_tutorials/eagerx_tutorials/pendulum/objects.py`\n",
-      "\n",
-      "Supported bridges:\n",
-      " - OdeBridge\n",
-      "\n",
-      "Make this spec with (use `entity_id: str = \"Pendulum\"`):\n",
-      "   spec = Object.make(entity_id: str, name: str, actuators: List[str] = None, sensors: List[str] = None, states: List[str] = None, rate: float = 30.0, render_shape: List[int] = None)\n",
-      "\n",
-      "class Pendulum(Object):\n",
-      "   spec(spec: eagerx.core.specs.ObjectSpec, name: str, actuators: List[str] = None, sensors: List[str] = None, states: List[str] = None, rate: float = 30.0, render_shape: List[int] = None):\n",
-      "      docs:\n",
-      "         Object spec of Pendulum\n",
-      "\n",
-      "   agnostic(spec: eagerx.core.specs.ObjectSpec, rate: float):\n",
-      "      config:\n",
-      "       - render_shape: [480, 480]\n",
-      "      sensors:\n",
-      "       - theta: <class 'std_msgs.msg._Float32.Float32'>\n",
-      "       - dtheta: <class 'std_msgs.msg._Float32.Float32'>\n",
-      "       - image: <class 'sensor_msgs.msg._Image.Image'>\n",
-      "       - u: <class 'std_msgs.msg._Float32MultiArray.Float32MultiArray'>\n",
-      "      actuators:\n",
-      "       - u: <class 'std_msgs.msg._Float32MultiArray.Float32MultiArray'>\n",
-      "      engine_states:\n",
-      "       - model_state: <class 'std_msgs.msg._Float32MultiArray.Float32MultiArray'>\n",
-      "       - model_parameters: <class 'std_msgs.msg._Float32MultiArray.Float32MultiArray'>\n",
-      "      docs:\n",
-      "         Agnostic definition of the Pendulum.\n",
-      "\n",
-      "                 Sensors\n",
-      "                 theta: angle of the pendulum wrt upward position\n",
-      "                 dtheta: angular velocity of the pendulum\n",
-      "                 image: render of pendulum system\n",
-      "                 u: DC motor voltage\n",
-      "\n",
-      "                 Actuators\n",
-      "                 u: DC motor voltage\n",
-      "\n",
-      "                 States\n",
-      "                 model_state: allows resetting the angle and angular velocity\n",
-      "                 model_parameters: allows resetting ODE parameters [J, m, l, b, K, R]\n",
-      "\n",
-      "                 Config\n",
-      "                 render_shape: shape of render window [height, width]\n",
-      "        \n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "eagerx.Object.info(\"Pendulum\")"
    ]
@@ -242,32 +138,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "26e7eb3f-a424-4c8b-b477-aad5372feac4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Params for ('pendulum', 'sensors', 'theta'): \n",
-       "\n",
-       "converter:\n",
-       "  converter_type: eagerx.core.converters/Identity\n",
-       "msg_type: std_msgs.msg._Float32/Float32\n",
-       "rate: 30.0\n",
-       "space_converter:\n",
-       "  converter_type: eagerx.converters.space_ros_converters/Space_Float32\n",
-       "  dtype: float32\n",
-       "  high: 9999\n",
-       "  initial_obs: null\n",
-       "  low: -9999"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pendulum = eagerx.Object.make(\"Pendulum\", \"pendulum\", actuators=[\"u\"], sensors=[\"theta\", \"dtheta\", \"image\"], states=[\"model_state\"])\n",
     "pendulum.sensors.theta"
@@ -278,38 +152,16 @@
    "id": "94f3ab90-fe63-4642-afdf-fca6d0ce559d",
    "metadata": {},
    "source": [
-    "Here we see that the space converter *Space_Float32* is specified for the sensor *theta*, which allows to go from a Gym space to a `Float32` message and the other way around.\n",
+    "Here we see that the space converter *Space_Float32* is specified for the sensor *theta*, which allows to go from a Gym `Box` space to a `Float32` message and the other way around.\n",
     "These values can be modified easily."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3a61c139-95d8-4354-90f7-0afb7e06a848",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Params for ('pendulum', 'sensors', 'theta'): \n",
-       "\n",
-       "converter:\n",
-       "  converter_type: eagerx.core.converters/Identity\n",
-       "msg_type: std_msgs.msg._Float32/Float32\n",
-       "rate: 30.0\n",
-       "space_converter:\n",
-       "  converter_type: eagerx.converters.space_ros_converters/Space_Float32\n",
-       "  dtype: float32\n",
-       "  high: 10\n",
-       "  initial_obs: null\n",
-       "  low: -10"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pendulum.sensors.theta.space_converter.low = -10\n",
     "pendulum.sensors.theta.space_converter.high = 10\n",
@@ -342,18 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ce40c187-9a58-4ccd-a52e-852f6b05566c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting space_converter.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile space_converter.py\n",
     "\n",
@@ -378,8 +222,7 @@
     "    def spec(spec: ConverterSpec, low=None, high=None, dtype=\"float32\"):\n",
     "        # Initialize spec with default arguments\n",
     "        spec.initialize(ExampleSpaceConverter)\n",
-    "        params = dict(low=low, high=high, dtype=dtype)\n",
-    "        spec.config.update(params)\n",
+    "        spec.config.update(low=low, high=high, dtype=dtype)\n",
     "\n",
     "    def initialize(self, low=None, high=None, dtype=\"float32\"):\n",
     "        self.low = np.array(low, dtype=dtype)\n",
@@ -397,8 +240,8 @@
     "        th = msg_b.data\n",
     "        \n",
     "        # START EXERCISE 1.1\n",
-    "        th -= 2 * np.pi * np.floor((th + np.pi) / (2 * np.pi))\n",
-    "        msg_a = np.array(th, dtype=self.dtype)\n",
+    "        # th -= 2 * np.pi * np.floor((th + np.pi) / (2 * np.pi))\n",
+    "        msg_a = np.array([np.sin(th), np.cos(th)], dtype=self.dtype)\n",
     "        # END EXERCISE 1.1\n",
     "        \n",
     "        return msg_a"
@@ -414,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "32c67cc2-5d92-4518-9cdc-eec5aa259f3f",
    "metadata": {},
    "outputs": [],
@@ -424,7 +267,7 @@
     "import numpy as np\n",
     "\n",
     "# START EXERCISE 1.2\n",
-    "space_converter = eagerx.SpaceConverter.make(\"ExampleSpaceConverter\", low=-np.pi, high=np.pi)\n",
+    "space_converter = eagerx.SpaceConverter.make(\"ExampleSpaceConverter\", low=[-1, -1], high=[1, 1])\n",
     "# END EXERCISE 1.2\n",
     "\n",
     "pendulum.sensors.theta.space_converter = space_converter"
@@ -440,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d9c9f940-0c44-46e6-bde8-081fceafcd0c",
    "metadata": {},
    "outputs": [],
@@ -477,126 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "cb6051ef-ce35-4eea-95e2-a96d1f68bde2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] [1651590628.310980]: Node \"/PendulumEnv/env/supervisor\" initialized.\n",
-      "[INFO] [1651590628.456226]: Node \"/PendulumEnv/bridge\" initialized.\n",
-      "[INFO] [1651590628.579400]: Node \"/PendulumEnv/environment\" initialized.\n",
-      "[INFO] [1651590628.605630]: Node \"/PendulumEnv/env/render\" initialized.\n",
-      "[INFO] [1651590628.718226]: Waiting for nodes \"['env/render']\" to be initialized.\n",
-      "[INFO] [1651590628.718788]: Node \"/PendulumEnv/pendulum/theta\" initialized.\n",
-      "[INFO] [1651590628.744902]: Node \"/PendulumEnv/pendulum/dtheta\" initialized.\n",
-      "Using cpu device\n",
-      "Wrapping the env with a `Monitor` wrapper\n",
-      "Wrapping the env in a DummyVecEnv.\n",
-      "[INFO] [1651590628.788085]: START RENDERING!\n",
-      "[INFO] [1651590628.813925]: Adding object \"pendulum\" of type \"Pendulum\" to the simulator.\n",
-      "[INFO] [1651590628.829849]: Node \"/PendulumEnv/pendulum/x\" initialized.\n",
-      "[INFO] [1651590628.838326]: [pendulum/image] START RENDERING!\n",
-      "[INFO] [1651590628.844743]: Node \"/PendulumEnv/pendulum/image\" initialized.\n",
-      "[INFO] [1651590628.857453]: Node \"/PendulumEnv/pendulum/pendulum_actuator\" initialized.\n",
-      "[INFO] [1651590628.870081]: Node \"/PendulumEnv/pendulum/u\" initialized.\n",
-      "[INFO] [1651590629.060968]: Nodes initialized.\n",
-      "[INFO] [1651590629.123114]: Pipelines initialized.\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -936     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 4        |\n",
-      "|    fps             | 65       |\n",
-      "|    time_elapsed    | 6        |\n",
-      "|    total_timesteps | 404      |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 17.4     |\n",
-      "|    critic_loss     | 3.67     |\n",
-      "|    ent_coef        | 0.917    |\n",
-      "|    ent_coef_loss   | -0.107   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 303      |\n",
-      "---------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -835     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 8        |\n",
-      "|    fps             | 64       |\n",
-      "|    time_elapsed    | 12       |\n",
-      "|    total_timesteps | 808      |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 29       |\n",
-      "|    critic_loss     | 3.62     |\n",
-      "|    ent_coef        | 0.84     |\n",
-      "|    ent_coef_loss   | -0.152   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 707      |\n",
-      "---------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -801     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 12       |\n",
-      "|    fps             | 63       |\n",
-      "|    time_elapsed    | 18       |\n",
-      "|    total_timesteps | 1212     |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 42       |\n",
-      "|    critic_loss     | 6.89     |\n",
-      "|    ent_coef        | 0.769    |\n",
-      "|    ent_coef_loss   | -0.184   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 1111     |\n",
-      "---------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -756     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 16       |\n",
-      "|    fps             | 63       |\n",
-      "|    time_elapsed    | 25       |\n",
-      "|    total_timesteps | 1616     |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 52.7     |\n",
-      "|    critic_loss     | 9.31     |\n",
-      "|    ent_coef        | 0.714    |\n",
-      "|    ent_coef_loss   | -0.12    |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 1515     |\n",
-      "---------------------------------\n",
-      "[INFO] [1651590657.087255]: [PendulumEnv][/PendulumEnv/bridge] Shutting down.\n",
-      "[INFO] [1651590657.088185]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/x'.\n",
-      "[INFO] [1651590657.088901]: [/PendulumEnv/pendulum/x] Shutting down.\n",
-      "[INFO] [1651590657.145653]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/image'.\n",
-      "[INFO] [1651590657.146316]: [/PendulumEnv/pendulum/image] Shutting down.\n",
-      "[INFO] [1651590657.147119]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/pendulum_actuator'.\n",
-      "[INFO] [1651590657.147808]: [/PendulumEnv/pendulum/pendulum_actuator] Shutting down.\n",
-      "[INFO] [1651590657.148654]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/u'.\n",
-      "[INFO] [1651590657.149370]: [/PendulumEnv/pendulum/u] Shutting down.\n",
-      "[INFO] [1651590657.151307]: [/PendulumEnv/bridge] Shutting down.\n",
-      "[INFO] [1651590657.152801]: [PendulumEnv][/PendulumEnv/env/render] Shutting down.\n",
-      "[INFO] [1651590657.153490]: [/PendulumEnv/env/render] Shutting down.\n",
-      "[INFO] [1651590657.155537]: [PendulumEnv][/PendulumEnv/pendulum/theta] Shutting down.\n",
-      "[INFO] [1651590657.156192]: [/PendulumEnv/pendulum/theta] Shutting down.\n",
-      "[INFO] [1651590657.156833]: [PendulumEnv][/PendulumEnv/pendulum/dtheta] Shutting down.\n",
-      "[INFO] [1651590657.157392]: [/PendulumEnv/pendulum/dtheta] Shutting down.\n",
-      "[INFO] [1651590657.158026]: [/PendulumEnv/env/supervisor] Shutting down.\n",
-      "[INFO] [1651590657.161209]: [/PendulumEnv/environment] Shutting down.\n",
-      "[INFO] [1651590657.163128]: Parameters under namespace \"/PendulumEnv\" deleted.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import Dict\n",
     "import stable_baselines3 as sb\n",
+    "from stable_baselines3.common.env_checker import check_env\n",
     "from eagerx.wrappers import Flatten\n",
     "\n",
     "\n",
@@ -607,7 +338,8 @@
     "    # Take first element because of window size (covered in other tutorial)\n",
     "    \n",
     "    # START EXERCISE 1.3\n",
-    "    th = obs[\"angle\"][0] \n",
+    "    sin_th, cos_th = obs[\"angle\"][0]\n",
+    "    th = np.arctan2(sin_th, cos_th)\n",
     "    # END EXERCISE 1.3\n",
     "    \n",
     "    thdot = obs[\"angular_velocity\"][0]\n",
@@ -638,6 +370,9 @@
     "# Stable Baselines3 expects flattened actions & observations\n",
     "# Convert observation and action space from Dict() to Box()\n",
     "env = Flatten(env)\n",
+    "\n",
+    "# Check that env follows Gym API and returns expected shapes\n",
+    "check_env(env)\n",
     "\n",
     "# Initialize learner\n",
     "model = sb.SAC(\"MlpPolicy\", env, verbose=1)\n",
@@ -703,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
