--- a/tutorials/pendulum/6_rendering.ipynb
+++ b/tutorials/pendulum/6_rendering.ipynb
@@ -10,11 +10,11 @@
     "In this tutorial, we will discuss how to make rendering more informative. We will also demonstrate that rendering is agnostic to the selected physics-engine.\n",
     "\n",
     "The following will be covered:\n",
-    "- Create a layover node that augments a raw image sensors\n",
-    "- Connect the layover node and use it for rendering\n",
+    "- Create an overlay node that augments a raw image sensors\n",
+    "- Connect the overlay node and use it for rendering\n",
     "- Demonstrate that rendering is agnostic to the selected physics-engine\n",
     "\n",
-    "In the remainder of this tutorial we will go more into detail on this concept.\n",
+    "In the remainder of this tutorial, we will go more into detail on this concept.\n",
     "\n",
     "Furthermore, at the end of this notebook you will find an exercise.\n",
     "For the exercise you will have to add/modify a couple of lines of code, which are marked by\n",
@@ -39,20 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ca8b6d03-40d4-4b45-92b2-61ffa09a3249",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not running on CoLab.\n",
-      "Execute ROS commands as \"!...\".\n",
-      "ROS noetic available.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    import eagerx_tutorials\n",
@@ -86,32 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "da87b514-cde8-4ff3-968b-718fe1b5c38c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... logging to /home/r2ci/.ros/log/9cefdd38-cdf1-11ec-9c64-bf766e5c8881/roslaunch-r2ci-Alienware-m15-R4-47684.log\n",
-      "\u001B[1mstarted roslaunch server http://192.168.68.129:42777/\u001B[0m\n",
-      "ros_comm version 1.15.14\n",
-      "\n",
-      "\n",
-      "SUMMARY\n",
-      "========\n",
-      "\n",
-      "PARAMETERS\n",
-      " * /rosdistro: noetic\n",
-      " * /rosversion: 1.15.14\n",
-      "\n",
-      "NODES\n",
-      "\n",
-      "[INFO] [1651919956.899805]: Roscore cannot run as another roscore/master is already running. Continuing without re-initializing the roscore.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import eagerx\n",
     "import eagerx_tutorials.pendulum  # Registers Pendulum\n",
@@ -133,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4b1fbe40-73a6-4135-b7dd-6cd42b52dd0c",
    "metadata": {},
    "outputs": [],
@@ -160,9 +128,9 @@
    "id": "b7f8f9fd-5698-4a26-8fbc-a453881444ac",
    "metadata": {},
    "source": [
-    "Below we have defined a layover node. The callback receives two inputs, namely the applied action `u` and a `raw_image`. In the callback, the applied action is visualised as an overlay on top of the raw image. The resulting `image` is the output of the callback. If we render this output, instead of the raw `pendulum.sensors.image`, we get a more informative rendered image.\n",
+    "Below we have defined a overlay node. The callback receives two inputs, namely the applied action `u` and a `raw_image`. In the callback, the applied action is visualised as an overlay on top of the raw image. The resulting `image` is the output of the callback. If we render this output, instead of the raw `pendulum.sensors.image`, we get a more informative rendered image.\n",
     "\n",
-    "In the exercise of this tutorial, we will finish the code that defines the Layover node below. Specifically, we will overlay some text on top of the image that indicates the current timestamp.\n",
+    "In the exercise of this tutorial, we will finish the code that defines the Overlay node below. Specifically, we will overlay some text on top of the image that indicates the current timestamp.\n",
     "\n",
     "Similar to what we covered in [this](https://colab.research.google.com/github/eager-dev/eagerx_tutorials/blob/master/tutorials/pendulum/4_nodes.ipynb) tutorial, we can create this node by inheriting from the class [`Node`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/node.html).\n",
     "This class has the following abstract methods we need to implement:\n",
@@ -175,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "878e4395-cb31-40ed-9974-b4b82ae0c644",
    "metadata": {},
    "outputs": [],
@@ -197,9 +165,9 @@
     "    return cv_image\n",
     "\n",
     "\n",
-    "class Layover(eagerx.Node):\n",
+    "class Overlay(eagerx.Node):\n",
     "    @staticmethod\n",
-    "    @eagerx.register.spec(\"Layover\", eagerx.Node)\n",
+    "    @eagerx.register.spec(\"Overlay\", eagerx.Node)\n",
     "    def spec(\n",
     "        spec: eagerx.specs.NodeSpec,\n",
     "        name: str,\n",
@@ -207,9 +175,9 @@
     "        process: int = eagerx.process.ENVIRONMENT,\n",
     "        color: str = \"cyan\",\n",
     "    ):\n",
-    "        \"\"\"Layover spec\"\"\"\n",
+    "        \"\"\"Overlay spec\"\"\"\n",
     "        # Fills spec with defaults parameters\n",
-    "        spec.initialize(Layover)\n",
+    "        spec.initialize(Overlay)\n",
     "\n",
     "        # Adjust default params\n",
     "        spec.config.update(name=name, rate=rate, process=process, color=color, inputs=[\"raw_image\", \"u\"], outputs=[\"image\"])\n",
@@ -254,6 +222,7 @@
     "        \n",
     "        # Add text with timestamp to image (i.e. visualise t_n)\n",
     "        # START EXERCISE 1.3\n",
+    "        img = cv2.putText(img, f\"Time={t_n:.2f}s\", (10, height - 20), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 0))\n",
     "        \n",
     "        # START EXERCISE 1.3\n",
     "        \n",
@@ -276,26 +245,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "858c3f13-6c63-4f92-88d3-872220769fae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the layover node\n",
-    "layover = eagerx.Node.make(\"Layover\", \"layover\", rate)\n",
+    "# Create the overlay node\n",
+    "overlay = eagerx.Node.make(\"Overlay\", \"overlay\", rate)\n",
     "\n",
-    "# Copy the space converter of the actuator to the layover node.\n",
+    "# Copy the space converter of the actuator to the overlay node.\n",
     "# This only suppresses a warning, that is otherwise harmless.\n",
-    "layover.inputs.u.space_converter = pendulum.actuators.u.space_converter\n",
+    "overlay.inputs.u.space_converter = pendulum.actuators.u.space_converter\n",
     "\n",
-    "# Add layover node to graph and connect it\n",
+    "# Add overlay node to graph and connect it\n",
     "# START EXERCISE 1.1\n",
+    "graph.add(overlay)\n",
+    "\n",
+    "graph.connect(target=overlay.inputs.u, action=\"voltage\")\n",
+    "graph.connect(source=pendulum.sensors.image, target=overlay.inputs.raw_image)\n",
     "\n",
     "# END EXERCISE 1.1\n",
     "\n",
     "# Define the render source\n",
     "# START EXERCISE 1.2\n",
-    "graph.render(source=pendulum.sensors.image, rate=rate)\n",
+    "# graph.render(source=pendulum.sensors.image, rate=rate)\n",
+    "graph.render(source=overlay.outputs.image, rate=rate)\n",
     "# START EXERCISE 1.2"
    ]
   },
@@ -311,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b18b5438",
    "metadata": {
     "pycharm": {
@@ -326,9 +300,9 @@
     "\n",
     "# Make the bridge\n",
     "# START EXERCISE 1.4\n",
-    "bridge = eagerx.Bridge.make(\"OdeBridge\", rate=rate)\n",
-    "# bridge = eagerx.Bridge.make(\"GymBridge\", rate=rate, process=eagerx.process.ENVIRONMENT)\n",
-    "# graph.remove_component(pendulum.states.model_state)\n",
+    "# bridge = eagerx.Bridge.make(\"OdeBridge\", rate=rate)\n",
+    "bridge = eagerx.Bridge.make(\"GymBridge\", rate=rate, process=eagerx.process.ENVIRONMENT)\n",
+    "graph.remove_component(pendulum.states.model_state)\n",
     "# END EXERCISE 1.4"
    ]
   },
@@ -347,120 +321,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0d9d2bf3-8a66-4605-a31f-e785e0a17b0b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] [1651919957.588579]: Node \"/PendulumEnv/env/supervisor\" initialized.\n",
-      "[INFO] [1651919957.730204]: Node \"/PendulumEnv/bridge\" initialized.\n",
-      "[INFO] [1651919957.852467]: Node \"/PendulumEnv/environment\" initialized.\n",
-      "[INFO] [1651919957.936105]: Node \"/PendulumEnv/pendulum/theta\" initialized.\n",
-      "[INFO] [1651919957.981980]: Node \"/PendulumEnv/pendulum/dtheta\" initialized.\n",
-      "[INFO] [1651919957.983833]: Waiting for nodes \"['env/render']\" to be initialized.\n",
-      "Using cpu device\n",
-      "Wrapping the env with a `Monitor` wrapper\n",
-      "Wrapping the env in a DummyVecEnv.\n",
-      "[INFO] [1651919958.043329]: Adding object \"pendulum\" of type \"Pendulum\" to the simulator.\n",
-      "[INFO] [1651919958.061206]: Node \"/PendulumEnv/pendulum/x\" initialized.\n",
-      "[INFO] [1651919958.083694]: Node \"/PendulumEnv/pendulum/image\" initialized.\n",
-      "[INFO] [1651919958.084498]: [pendulum/image] START RENDERING!\n",
-      "[INFO] [1651919958.103086]: Node \"/PendulumEnv/pendulum/pendulum_actuator\" initialized.\n",
-      "[INFO] [1651919958.121359]: Node \"/PendulumEnv/pendulum/u\" initialized.\n",
-      "[INFO] [1651919959.194804]: Nodes initialized.\n",
-      "[INFO] [1651919959.249067]: Pipelines initialized.\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -1.2e+03 |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 4        |\n",
-      "|    fps             | 63       |\n",
-      "|    time_elapsed    | 6        |\n",
-      "|    total_timesteps | 404      |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 24       |\n",
-      "|    critic_loss     | 10.9     |\n",
-      "|    ent_coef        | 0.918    |\n",
-      "|    ent_coef_loss   | -0.103   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 303      |\n",
-      "---------------------------------\n",
-      "----------------------------------\n",
-      "| rollout/           |           |\n",
-      "|    ep_len_mean     | 101       |\n",
-      "|    ep_rew_mean     | -1.02e+03 |\n",
-      "| time/              |           |\n",
-      "|    episodes        | 8         |\n",
-      "|    fps             | 64        |\n",
-      "|    time_elapsed    | 12        |\n",
-      "|    total_timesteps | 808       |\n",
-      "| train/             |           |\n",
-      "|    actor_loss      | 35.4      |\n",
-      "|    critic_loss     | 5.53      |\n",
-      "|    ent_coef        | 0.84      |\n",
-      "|    ent_coef_loss   | -0.163    |\n",
-      "|    learning_rate   | 0.0003    |\n",
-      "|    n_updates       | 707       |\n",
-      "----------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -935     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 12       |\n",
-      "|    fps             | 63       |\n",
-      "|    time_elapsed    | 19       |\n",
-      "|    total_timesteps | 1212     |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 47.3     |\n",
-      "|    critic_loss     | 6.07     |\n",
-      "|    ent_coef        | 0.762    |\n",
-      "|    ent_coef_loss   | -0.222   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 1111     |\n",
-      "---------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -869     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 16       |\n",
-      "|    fps             | 63       |\n",
-      "|    time_elapsed    | 25       |\n",
-      "|    total_timesteps | 1616     |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 61       |\n",
-      "|    critic_loss     | 4.97     |\n",
-      "|    ent_coef        | 0.699    |\n",
-      "|    ent_coef_loss   | -0.203   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 1515     |\n",
-      "---------------------------------\n",
-      "[INFO] [1651919986.540698]: [PendulumEnv] Send termination signal to '/PendulumEnv/env/render'.\n",
-      "[INFO] [1651919986.541542]: [PendulumEnv][/PendulumEnv/bridge] Shutting down.\n",
-      "[INFO] [1651919986.542227]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/x'.\n",
-      "[INFO] [1651919986.542872]: [/PendulumEnv/pendulum/x] Shutting down.\n",
-      "[INFO] [1651919986.597756]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/image'.\n",
-      "[INFO] [1651919986.598776]: [/PendulumEnv/pendulum/image] Shutting down.\n",
-      "[INFO] [1651919986.600023]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/pendulum_actuator'.\n",
-      "[INFO] [1651919986.600626]: [/PendulumEnv/pendulum/pendulum_actuator] Shutting down.\n",
-      "[INFO] [1651919986.601283]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/u'.\n",
-      "[INFO] [1651919986.601852]: [/PendulumEnv/pendulum/u] Shutting down.\n",
-      "[INFO] [1651919986.602490]: [/PendulumEnv/bridge] Shutting down.\n",
-      "[INFO] [1651919986.603741]: [PendulumEnv][/PendulumEnv/pendulum/theta] Shutting down.\n",
-      "[INFO] [1651919986.604360]: [/PendulumEnv/pendulum/theta] Shutting down.\n",
-      "[INFO] [1651919986.605014]: [PendulumEnv][/PendulumEnv/pendulum/dtheta] Shutting down.\n",
-      "[INFO] [1651919986.605585]: [/PendulumEnv/pendulum/dtheta] Shutting down.\n",
-      "[INFO] [1651919986.606255]: [/PendulumEnv/env/supervisor] Shutting down.\n",
-      "[INFO] [1651919986.609506]: [/PendulumEnv/environment] Shutting down.\n",
-      "[INFO] [1651919986.611503]: Parameters under namespace \"/PendulumEnv\" deleted.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import Dict\n",
     "import numpy as np\n",
@@ -538,14 +402,22 @@
     "\n",
     "### Add your code to the following blocks: \n",
     "\n",
-    "1.1 Add the layover node to the graph and connect the inputs `layover.inputs.raw_image` and `layover.inputs.u` to `pendulum.sensors.image` and action `voltage`, respectively.  \n",
-    "1.2 Change the render source to `layover.outputs.image`. Using the [*eagerx_gui* package](https://github.com/eager-dev/eagerx_gui), you would see that the graph looks as below if `graph.gui()` would be called. Run the code, and you should now see the rendered layover instead of the raw sensor images. \n",
+    "1.1 Add the layover node to the graph and connect the inputs `overlay.inputs.raw_image` and `overlay.inputs.u` to `pendulum.sensors.image` and action `voltage`, respectively.  \n",
+    "1.2 Change the render source to `overlay.outputs.image`. Using the [*eagerx_gui* package](https://github.com/eager-dev/eagerx_gui), you would see that the graph looks as below if `graph.gui()` would be called. Run the code, and you should now see the rendered layover instead of the raw sensor images. \n",
     "\n",
     "<img src=\"./figures/tutorial_6_gui.svg\" width=720>\n",
     "\n",
     "1.3 In the callback of the layover node, add the current time (i.e. `t_n`) as text to the image. Run the code, and you should see a timestamp that increase while the episode progresses.  \n",
     "1.4 Select the GymBridge by uncommenting the marked line. Also deselect the `model_state` by uncommenting the marked line of code.  Run the code, and you should see that the raw image has changed, but the layover is still put on top. Hence, this demonstrates the agnostic behavior of the `graph`. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "587aa806-c9dc-4a43-8782-d37f79e3697b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -564,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
