--- a/tutorials/pendulum/7_reset_routine.ipynb
+++ b/tutorials/pendulum/7_reset_routine.ipynb
@@ -14,7 +14,7 @@
     "- Defining the reset routine with a [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html).\n",
     "- Reset the object's state with the [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html).\n",
     "\n",
-    "In the remainder of this tutorial we will go more into detail on this concept.\n",
+    "In the remainder of this tutorial, we will go more into detail on this concept.\n",
     "\n",
     "Furthermore, at the end of this notebook you will find an exercise.\n",
     "For the exercise you will have to add/modify a couple of lines of code, which are marked by\n",
@@ -39,20 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ca8b6d03-40d4-4b45-92b2-61ffa09a3249",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not running on CoLab.\n",
-      "Execute ROS commands as \"!...\".\n",
-      "ROS noetic available.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    import eagerx_tutorials\n",
@@ -80,47 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "da87b514-cde8-4ff3-968b-718fe1b5c38c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... logging to /home/r2ci/.ros/log/9cefdd38-cdf1-11ec-9c64-bf766e5c8881/roslaunch-r2ci-Alienware-m15-R4-32962.log\n",
-      "\u001B[1mstarted roslaunch server http://192.168.68.129:36423/\u001B[0m\n",
-      "ros_comm version 1.15.14\n",
-      "\n",
-      "\n",
-      "SUMMARY\n",
-      "========\n",
-      "\n",
-      "PARAMETERS\n",
-      " * /rosdistro: noetic\n",
-      " * /rosversion: 1.15.14\n",
-      "\n",
-      "NODES\n",
-      "\n",
-      "auto-starting new master\n",
-      "\u001B[1mprocess[master]: started with pid [33011]\u001B[0m\n",
-      "\u001B[1mROS_MASTER_URI=http://localhost:11311\u001B[0m\n",
-      "\u001B[1msetting /run_id to 9cefdd38-cdf1-11ec-9c64-bf766e5c8881\u001B[0m\n",
-      "\u001B[1mprocess[rosout-1]: started with pid [33036]\u001B[0m\n",
-      "started core service [/rosout]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<roslaunch.parent.ROSLaunchParent at 0x7fd2942e6970>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import eagerx\n",
     "import eagerx_tutorials.pendulum  # Registers Pendulum\n",
@@ -136,7 +89,11 @@
    "source": [
     "## How do [ResetNodes](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) work?\n",
     "\n",
-    "As mentioned before, resetting an object is non-trivial in the real-world compared to simulation, where resets can often be caried out with a single command. We developed [`ResetNodes`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) in EAGERx to allow users to easily define reset routines that may, for example use pre-defined controllers, to reset an Object to a desired state. The structure of a [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) is very similar to a conventional [`Node`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/node.html). However, the [`callback()`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html#eagerx.core.entities.ResetNode.callback) of a [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) is skipped until the agent/user calls [`.reset()`](https://eagerx.readthedocs.io/en/master/guide/api_reference/env/index.html#eagerx.core.env.EagerxEnv.reset) on the gym evironment. At that moment, the desired state that that was selected in the [reset function](https://eagerx.readthedocs.io/en/master/guide/api_reference/env/index.html#eagerx.core.env.EagerxEnv.reset_fn) (convered in [this tutorial](https://colab.research.google.com/github/eager-dev/eagerx_tutorials/blob/master/tutorials/pendulum/2_reset_and_step.ipynb)) is send to the [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) as a `target` state. The [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) takes over control and starts sending commands to the object's actuators until the object's current state is equal (or close to) that target state. In other words, after the agent/user calls [`.reset()`](https://eagerx.readthedocs.io/en/master/guide/api_reference/env/index.html#eagerx.core.env.EagerxEnv.reset) the [`ResetNode.callback()`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html#eagerx.core.entities.ResetNode.callback) is called at the specified node `rate` with the connected `inputs` together with the `target` state and will produce `outputs` that bring the object's state closer to the desired state. During each callback, the [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) assess the status of the reset routine (i.e. whether the `target` state was reached) and communicates this status to the bridge with a message.    \n",
+    "As mentioned before, resetting an object is non-trivial in the real-world compared to simulation, where resets can often be caried out with a single command. We developed [`ResetNodes`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) in EAGERx to allow users to easily define reset routines that may, for example use pre-defined controllers, to reset an Object to a desired state.\n",
+    "\n",
+    "The structure of a [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) is very similar to a conventional [`Node`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/node.html). However, the [`callback()`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html#eagerx.core.entities.ResetNode.callback) of a [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) is skipped until the agent/user calls [`.reset()`](https://eagerx.readthedocs.io/en/master/guide/api_reference/env/index.html#eagerx.core.env.EagerxEnv.reset) on the gym evironment. At that moment, the desired state that that was selected in the [reset function](https://eagerx.readthedocs.io/en/master/guide/api_reference/env/index.html#eagerx.core.env.EagerxEnv.reset_fn) (convered in [this tutorial](https://colab.research.google.com/github/eager-dev/eagerx_tutorials/blob/master/tutorials/pendulum/2_reset_and_step.ipynb)) is send to the [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) as a `target` state.\n",
+    "\n",
+    "The [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) takes over control and starts sending commands to the object's actuators until the object's current state is equal (or close to) that target state. In other words, after the agent/user calls [`.reset()`](https://eagerx.readthedocs.io/en/master/guide/api_reference/env/index.html#eagerx.core.env.EagerxEnv.reset) the [`ResetNode.callback()`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html#eagerx.core.entities.ResetNode.callback) is called at the specified node `rate` with the connected `inputs` together with the `target` state and will produce `outputs` that bring the object's state closer to the desired state. During each callback, the [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) assess the status of the reset routine (i.e. whether the `target` state was reached) and communicates this status to the bridge with a message.    \n",
     "\n",
     "**Important**: To assure input-output synchronization in [`sync`](https://eagerx.readthedocs.io/en/master/guide/api_reference/bridge/index.html#eagerx.core.entities.Bridge.sync) mode, the [`ResetNode`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html) must be placed in-between the actions commanded by the agent/user and the object actuator. Over the course of an episode, the reset node simply feeds through all commands, and only after [`.reset()`](https://eagerx.readthedocs.io/en/master/guide/api_reference/env/index.html#eagerx.core.env.EagerxEnv.reset) is called, will the commands be produced by [`ResetNode.callback()`](https://eagerx.readthedocs.io/en/master/guide/api_reference/node/reset_node.html#eagerx.core.entities.ResetNode.callback). The reset node's `rate` is constrained to be equal to the rate of the commands that it must feedthrough. \n",
     "\n",
@@ -168,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "878e4395-cb31-40ed-9974-b4b82ae0c644",
    "metadata": {},
    "outputs": [],
@@ -216,6 +173,7 @@
     "        spec.config.update(name=name, rate=rate, process=eagerx.process.ENVIRONMENT, color=\"grey\")\n",
     "        spec.config.update(inputs=[\"theta\", \"dtheta\"], targets=[\"goal\"], outputs=[\"u\"])\n",
     "        spec.config.update(u_range=u_range, threshold=threshold, timeout=timeout)\n",
+    "        # Proportional (Kp), derivative (Kd) and integral (Ki) gains\n",
     "        spec.config.gains = gains if isinstance(gains, list) else [1.0, 0.5, 0.0]\n",
     "\n",
     "        # Add space_converter\n",
@@ -292,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "858c3f13-6c63-4f92-88d3-872220769fae",
    "metadata": {
     "tags": []
@@ -357,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "99e7fce7-8fa9-411d-a590-739ed3dbd860",
    "metadata": {},
    "outputs": [],
@@ -369,7 +327,9 @@
     "    # START EXERCISE 1.1\n",
     "    # Sample angles near the downward position.\n",
     "    # Hint: angles are in [-pi, pi] and upright is theta=0.\n",
-    "    states[\"pendulum/model_state\"] = np.array([np.pi, 0], dtype=\"float32\")\n",
+    "    # states[\"pendulum/model_state\"] = np.array([np.pi, 0], dtype=\"float32\")\n",
+    "    reset_angle = np.random.uniform(low=- 3 * np.pi / 2, high=-np.pi / 2)\n",
+    "    states[\"pendulum/model_state\"] = np.array([reset_angle, 0], dtype=\"float32\")\n",
     "    # END EXERCISE 1.1\n",
     "    return states"
    ]
@@ -386,123 +346,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0d9d2bf3-8a66-4605-a31f-e785e0a17b0b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] [1651919815.595556]: Node \"/PendulumEnv/env/supervisor\" initialized.\n",
-      "[INFO] [1651919815.741111]: Node \"/PendulumEnv/bridge\" initialized.\n",
-      "[INFO] [1651919815.914065]: Node \"/PendulumEnv/environment\" initialized.\n",
-      "[INFO] [1651919816.015099]: Node \"/PendulumEnv/reset_angle\" initialized.\n",
-      "[INFO] [1651919816.042641]: Waiting for nodes \"['env/render']\" to be initialized.\n",
-      "[INFO] [1651919816.054446]: Node \"/PendulumEnv/pendulum/theta\" initialized.\n",
-      "[INFO] [1651919816.080170]: Node \"/PendulumEnv/pendulum/dtheta\" initialized.\n",
-      "Using cpu device\n",
-      "Wrapping the env with a `Monitor` wrapper\n",
-      "Wrapping the env in a DummyVecEnv.\n",
-      "[INFO] [1651919816.142294]: Adding object \"pendulum\" of type \"Pendulum\" to the simulator.\n",
-      "[INFO] [1651919816.158228]: Node \"/PendulumEnv/pendulum/x\" initialized.\n",
-      "[INFO] [1651919816.175462]: [pendulum/image] START RENDERING!\n",
-      "[INFO] [1651919816.175653]: Node \"/PendulumEnv/pendulum/image\" initialized.\n",
-      "[INFO] [1651919816.188318]: Node \"/PendulumEnv/pendulum/pendulum_actuator\" initialized.\n",
-      "[INFO] [1651919816.199715]: Node \"/PendulumEnv/pendulum/u\" initialized.\n",
-      "[INFO] [1651919817.286460]: Nodes initialized.\n",
-      "[INFO] [1651919817.411295]: Pipelines initialized.\n",
-      "----------------------------------\n",
-      "| rollout/           |           |\n",
-      "|    ep_len_mean     | 101       |\n",
-      "|    ep_rew_mean     | -1.08e+03 |\n",
-      "| time/              |           |\n",
-      "|    episodes        | 4         |\n",
-      "|    fps             | 62        |\n",
-      "|    time_elapsed    | 6         |\n",
-      "|    total_timesteps | 404       |\n",
-      "| train/             |           |\n",
-      "|    actor_loss      | 20.5      |\n",
-      "|    critic_loss     | 2.93      |\n",
-      "|    ent_coef        | 0.918     |\n",
-      "|    ent_coef_loss   | -0.0997   |\n",
-      "|    learning_rate   | 0.0003    |\n",
-      "|    n_updates       | 303       |\n",
-      "----------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -953     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 8        |\n",
-      "|    fps             | 64       |\n",
-      "|    time_elapsed    | 12       |\n",
-      "|    total_timesteps | 808      |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 34.5     |\n",
-      "|    critic_loss     | 1.16     |\n",
-      "|    ent_coef        | 0.832    |\n",
-      "|    ent_coef_loss   | -0.198   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 707      |\n",
-      "---------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -886     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 12       |\n",
-      "|    fps             | 64       |\n",
-      "|    time_elapsed    | 18       |\n",
-      "|    total_timesteps | 1212     |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 48.1     |\n",
-      "|    critic_loss     | 0.472    |\n",
-      "|    ent_coef        | 0.75     |\n",
-      "|    ent_coef_loss   | -0.229   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 1111     |\n",
-      "---------------------------------\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 101      |\n",
-      "|    ep_rew_mean     | -825     |\n",
-      "| time/              |          |\n",
-      "|    episodes        | 16       |\n",
-      "|    fps             | 64       |\n",
-      "|    time_elapsed    | 24       |\n",
-      "|    total_timesteps | 1616     |\n",
-      "| train/             |          |\n",
-      "|    actor_loss      | 59.4     |\n",
-      "|    critic_loss     | 0.619    |\n",
-      "|    ent_coef        | 0.693    |\n",
-      "|    ent_coef_loss   | -0.108   |\n",
-      "|    learning_rate   | 0.0003   |\n",
-      "|    n_updates       | 1515     |\n",
-      "---------------------------------\n",
-      "[INFO] [1651919843.762226]: [PendulumEnv] Send termination signal to '/PendulumEnv/env/render'.\n",
-      "[INFO] [1651919843.763085]: [PendulumEnv][/PendulumEnv/bridge] Shutting down.\n",
-      "[INFO] [1651919843.763754]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/x'.\n",
-      "[INFO] [1651919843.764547]: [/PendulumEnv/pendulum/x] Shutting down.\n",
-      "[INFO] [1651919843.825222]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/image'.\n",
-      "[INFO] [1651919843.826648]: [/PendulumEnv/pendulum/image] Shutting down.\n",
-      "[INFO] [1651919843.827811]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/pendulum_actuator'.\n",
-      "[INFO] [1651919843.828558]: [/PendulumEnv/pendulum/pendulum_actuator] Shutting down.\n",
-      "[INFO] [1651919843.829467]: [/PendulumEnv/bridge] Shutting down '/PendulumEnv/pendulum/u'.\n",
-      "[INFO] [1651919843.830096]: [/PendulumEnv/pendulum/u] Shutting down.\n",
-      "[INFO] [1651919843.830786]: [/PendulumEnv/bridge] Shutting down.\n",
-      "[INFO] [1651919843.832136]: [PendulumEnv][/PendulumEnv/reset_angle] Shutting down.\n",
-      "[INFO] [1651919843.832775]: [/PendulumEnv/reset_angle] Shutting down.\n",
-      "[INFO] [1651919843.833533]: [PendulumEnv][/PendulumEnv/pendulum/theta] Shutting down.\n",
-      "[INFO] [1651919843.834180]: [/PendulumEnv/pendulum/theta] Shutting down.\n",
-      "[INFO] [1651919843.834869]: [PendulumEnv][/PendulumEnv/pendulum/dtheta] Shutting down.\n",
-      "[INFO] [1651919843.835497]: [/PendulumEnv/pendulum/dtheta] Shutting down.\n",
-      "[INFO] [1651919843.836236]: [/PendulumEnv/env/supervisor] Shutting down.\n",
-      "[INFO] [1651919843.839689]: [/PendulumEnv/environment] Shutting down.\n",
-      "[INFO] [1651919843.841672]: Parameters under namespace \"/PendulumEnv\" deleted.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import Dict\n",
     "import stable_baselines3 as sb\n",
@@ -549,10 +396,10 @@
     "env = Flatten(env)\n",
     "\n",
     "# Initialize learner\n",
-    "model = sb.SAC(\"MlpPolicy\", env, verbose=1)\n",
+    "model = sb.SAC(\"MlpPolicy\", env, learning_rate=3e-4, train_freq=8, gradient_steps=-1, use_sde=True, verbose=1)\n",
     "\n",
     "# Train for 1 minute (sim time)\n",
-    "model.learn(total_timesteps=int(60 * rate))\n",
+    "model.learn(total_timesteps=int(5 * 60 * rate))\n",
     "\n",
     "env.shutdown()"
    ]
@@ -586,6 +433,14 @@
     "1.1 Change the reset function, such that the desired angles are sampled randomly around the downward position of the pendulum. This will improve state-space coverage and improve the learning rate.  \n",
     "1.2 Next, modify the callback of the reset node such that we do not use the PID controller, but perform random actions for 2 seconds before considering the reset finished. This will improve state-space coverage even more, because we now also allow for non-zero angular velocity resets. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91fc1c06-9b0f-4a92-8719-f5f0b48f2adb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -604,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
